fix: 감정 1개만 사용하도록 수정